# prstats-cli

./: Cargo.toml  LICENSE  README.md  prstats-cli.sln
.installers/: prstats-cli.wixproj  prstats-cli.wxs
.installers/chocolatey/: prstats-cli.nuspec
.installers/chocolatey/tools/: chocolateyInstall.ps1
PRStats/: Data.fs  Extensions.fs  Models.fs  PRStats.fsproj  Program.fs  Settings.fs  Utils.fs
PRStats.Tests/: PRStats.Tests.fsproj  Tests.fs
PRStats/Commands/: Commits.fs  Fetch.fs  PullRequests.fs  Purge.fs  Reports.fs  Run.fs  Setup.fs
PRStats/Models/: AzureDevOps.fs  CLI.fs  Common.fs  Github.fs  Settings.fs
PRStats/Properties/: launchSettings.json
Reports/: Number of pull requests by user.sql  Reviewer summary.sql  Stats.sql
api/azure_devops/: auth_check.http  pull_requests.http
src/: args.rs  commands.rs  main.rs  models.rs  settings.rs  utils.rs
src/commands/: commits.rs  fetch.rs  pull_requests.rs  purge.rs  setup.rs
