[package]
name = "prstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.11.0"
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
toml = "0.8.6"
